--- a/pages/galery.html
+++ b/pages/galery.html
@@ -2,20 +2,14 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8">
-	<title>Студия Зефир</title>
+	<title>Студия декора и праздника Зефир</title>
 	<link rel="shortcut icon" href="../images/icon.jpg">
 <link href="../css/style1.css" rel="stylesheet" type="text/css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/animate.min.css" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="../css/footer.css">
-<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Satisfy&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-<script src="../js/wow.js"></script>
-<script>
-new WOW().init();
-</script>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,8 +23,8 @@ new WOW().init();
   <ul id="nav">
         <li class="nav-item-li"><a href="../index.html">ГЛАВНАЯ</a></li>
         <li class="nav-item-li"><a href="">ГАЛЕРЕЯ</a></li>
-        <li class="nav-item-li"><a href="">ПРАЙС</a></li>
-        <li class="nav-item-li"> <a href="">КОНТАКТЫ</a></li>
+        <li class="nav-item-li"><a href="cost.html">ПРАЙС</a></li>
+        <li class="nav-item-li"><a href="contacts.html">КОНТАКТЫ</a></li>
   </ul>   
   <div class="vk">
     <a href="https://vk.com/studiozefir21" target="_blank"><img src="../images/vk.png"></a>
@@ -41,13 +35,12 @@ new WOW().init();
 <!-- Banner -->
 
 <section> 
+    <br>
+    <h2 class="text-center pt-2 pb-2">В каждой мельчайшей детали свадебного декора отражается уникальная история Вашей любви...</h2>
+    
+<!-- Первый блок, 3 горизонтальные картинки-->
 
-    <video class="video" width="800" controls="controls" autoplay style="display: block; margin: 0 auto;">
-        <source src="../images/galery/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-    </video>
-
-    <h2 class="text-center">Photo</h2>
-    <div class="container-fluid">
+<div class="container-fluid">
         <div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
         <div class="col-lg-4 col-md-6 p-1">
             <img src="../images/galery/Ассоль-1.jpg">
@@ -56,70 +49,213 @@ new WOW().init();
             <img src="../images/galery/Ассоль-5.jpg">
         </div>
         <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-1.jpg">
+            <img src="../images/galery/Б1.jpg">
         </div>
     </div>
+
 <!-- Второй блок, 3 вертикальные картинки-->
+
     <div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
         <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-2.jpg">
+            <img src="../images/galery/v/Ассоль-2.jpg">
         </div>
         <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-4.jpg">
+            <img src="../images/galery/v/Ассоль-4.jpg">
         </div>
         <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-3.jpg">
+            <img src="../images/galery/v/Ассоль-3.jpg">
         </div>
     </div>
+
+<!-- 3 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/В4.jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/В2.jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/В3.jpg">
+    </div>
+</div>
+
+<!-- 4 блок, 3 вертикальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Багратиони-3.jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Багратиони-8.jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Багратиони-1.jpg">
+    </div>
+</div>
+
+
+<!-- 5 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир беж (25).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/з1.jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/з2.jpg">
+    </div>
+</div>
+
+<!-- 6 блок, 3 вертикальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (3).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (12).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (1).jpg">
+    </div>
+</div>
+
+<!-- 7 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир белоснежное (1).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир белоснежное (5).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир белоснежное (6).jpg">
+    </div>
+</div>
+
+<!-- 8 блок, 3 вертикальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (13).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (14).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (1).jpg">
+    </div>
+</div>
+
+
+<!-- 9 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Зефир пудра (5).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Зефир пудра (10).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Зефир пудра (8).jpg">
+    </div>
+</div>
+
+<!-- 10 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (7).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (3).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Зефир пудра (6).jpg">
+    </div>
+</div>
+
+<!-- 11 блок, 3 вертикальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (3).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (12).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Венеция белоснежное (1).jpg">
+    </div>
+</div>
+
+<!-- 12 блок, 3 горизонтальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Облакапудра (3).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/Облакапудра (4).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/разное (7).jpg">
+    </div>
+</div>
+
+<!-- 13 блок, 3 вертикальные картинки-->
+
+<div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Облакапудра (1).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Облакапудра (5).jpg">
+    </div>
+    <div class="col-lg-4 col-md-6 p-1">
+        <img src="../images/galery/v/Облакапудра (2).jpg">
+    </div>
+</div>
 </div>
 
 <!--footer-->
 
+<section>
     <footer id="myFooter">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <div><a href="#"><img class="logo" src="../images/logo.png" width="100px" height="100px"></a></div>
+                    <div><a href="#"><img class="logo" src="../images/logo.png" width="100px" height="auto"></a></div>
+                    <a href="#" class="btn btn-default " role="button">В начало страницы</a>
                 </div>
                 <div class="col-sm-2">
-                    <h5>Get started</h5>
-                    <ul>
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Новости</a></li>
-                    </ul>
+                    <h5><a href="../index.html">Главная</a></h5>
                 </div>
                 <div class="col-sm-2">
-                    <h5>About us</h5>
-                    <ul>
-                        <li><a href="#">Company Information</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Reviews</a></li>
-                    </ul>
+                    <h5><a href="cost.html">Прайс</a></h5>
                 </div>
                 <div class="col-sm-2">
-                    <h5>Support</h5>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Forums</a></li>
-                    </ul>
+                    <h5><a href="contacts.html">Контакты</a></h5>
                 </div>
                 <div class="col-sm-3">
                     <div class="social-networks">
-                        <a href="#" class="twitter"></i></a>
-                        <a href="#" class="facebook"></a>
-                        <a href="#" class="google"></a>
-                    </div>
-                    <button type="button" class="btn btn-default">Contact us</button>
-                </div>
+                        <a href="https://vk.com/studiozefir21" target="_blank"><img src="../images/vk.png"></a>
+                        <a href="https://www.instagram.com/studiozefir21/" target="_blank"><img src="../images/inst.png"></a>
+                     </div>
+                     <a href="contacts.html" class="btn btn-default " role="button">Связаться с нами</a>
+                   </div>
             </div>
-        </div>
+        </div>        
         <div class="footer-copyright">
-            <p>© 2021 Copyright Text </p>
+            <p>© 2021 Все права защищены </p>
         </div>
     </footer>
-  
-</section>
+  </section>
 </body>
 </html>
