--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,20 +2,14 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8">
-	<title>Студия Зефир</title>
+	<title>Студия декора и праздника Зефир</title>
 	<link rel="shortcut icon" href="../images/icon.jpg">
 <link href="../css/style1.css" rel="stylesheet" type="text/css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/animate.min.css" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="../css/footer.css">
-<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Satisfy&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-<script src="../js/wow.js"></script>
-<script>
-new WOW().init();
-</script>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +23,7 @@ new WOW().init();
   <ul id="nav">
         <li class="nav-item-li"><a href="../index.html">ГЛАВНАЯ</a></li>
         <li class="nav-item-li"><a href="galery.html">ГАЛЕРЕЯ</a></li>
-        <li class="nav-item-li"><a href="">ПРАЙС</a></li>
+        <li class="nav-item-li"><a href="cost.html">ПРАЙС</a></li>
         <li class="nav-item-li"> <a href="">КОНТАКТЫ</a></li>
   </ul>   
   <div class="vk">
@@ -38,85 +32,83 @@ new WOW().init();
 </div>  
 </header>
 
-<!-- Banner -->
+<!-- Основная часть -->  
+<section>
+    <!-- People -->
 
-<section> 
-    <h2 class="text-center">Photo</h2>
-    <div class="container-fluid">
-        <div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-1.jpg">
-        </div>
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-5.jpg">
-        </div>
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-1.jpg">
-        </div>
-    </div>
+    <h2 class="text-center mt-5 mb-5">Ваш праздник станет неповторимым и изящным благодаря нашей команде:</h2>
 
-<!-- Второй блок, 3 вертикальные картинки-->
-
-    <div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-2.jpg">
+<div class="container-fluid">
+    <div class="col-lg-12 d-flex flex-wrap justify-content-center align-items-center">
+        <div class="col-lg-3 col-md-6 col-sm-6 p-3">
+            <img src="../images/artem.jpg" class="rounded-3" alt="Фото Артёма">
+            <h3 class="text-center mt-3">Артём</h3>
         </div>
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-4.jpg">
+        <div class="col-lg-3 col-md-6 col-sm-6 p-3">
+            <img src="../images/alena.jpg"  class="rounded-3" alt="Фото Алёны">
+            <h3 class="text-center mt-3">Алёна</h3>
         </div>
-        <div class="col-lg-4 col-md-6 p-1">
-            <img src="../images/galery/Ассоль-3.jpg">
+        <div class="col-lg-3 col-md-6 col-sm-6 p-3">
+            <img src="../images/nina.jpg"  class="rounded-3" alt="Фото Нины">
+            <h3 class="text-center mt-3">Нина</h3>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 p-3">
+            <img src="../images/sergey.jpg"  class="rounded-3" alt="Фото Сергея">
+            <h3 class="text-center mt-3">Сергей</h3>
         </div>
     </div>
 </div>
 
-<!--footer-->
+</section>
 
+<h2 class="text-center mt-5 mb-5 text-clr">По всем интересующим вопросам Вы можете связаться с нами</h2>
+
+<div class="text-center mt-5 mb-5">
+<div>
+    <img src="../images/whatsapp.png"> <a class="table">+7(965)683-85-36</a>
+</div>
+<div class="text-center mt-5 mb-5">
+    <img src="../images/viber.png"> <a  class="table">+7(987)760-67-37</a>
+</div>
+</div>
+<section>
+    <h3 class="text-center">Для свадебных и ивент-агентств действуют особые условия сотрудничества.</h3>
+    <h3 class="text-center">Будем рады знакомству с Вами!</h3>
+</section>
+
+
+ <!--footer-->
+
+ <section>
     <footer id="myFooter">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <div><a href="#"><img class="logo" src="../images/logo.png" width="100px" height="100px"></a></div>
+                    <div><a href="#"><img class="logo" src="../images/logo.png" width="100px" height="auto"></a></div>
+                    <a href="#" class="btn btn-default " role="button">В начало страницы</a>
                 </div>
                 <div class="col-sm-2">
-                    <h5>Get started</h5>
-                    <ul>
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Новости</a></li>
-                    </ul>
+                    <h5><a href="../index.html">Главная</a></h5>
                 </div>
                 <div class="col-sm-2">
-                    <h5>About us</h5>
-                    <ul>
-                        <li><a href="#">Company Information</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Reviews</a></li>
-                    </ul>
+                    <h5><a href="galery.html">Галерея</a></h5>
                 </div>
                 <div class="col-sm-2">
-                    <h5>Support</h5>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Forums</a></li>
-                    </ul>
+                    <h5><a href="cost.html">Прайс</a></h5>
                 </div>
                 <div class="col-sm-3">
                     <div class="social-networks">
-                        <a href="#" class="twitter"></i></a>
-                        <a href="#" class="facebook"></a>
-                        <a href="#" class="google"></a>
-                    </div>
-                    <button type="button" class="btn btn-default">Contact us</button>
-                </div>
+                        <a href="https://vk.com/studiozefir21" target="_blank"><img src="../images/vk.png"></a>
+                        <a href="https://www.instagram.com/studiozefir21/" target="_blank"><img src="../images/inst.png"></a>
+                     </div>
+                     <a href="contacts.html" class="btn btn-default " role="button">Связаться с нами</a>
+                   </div>
             </div>
-        </div>
+        </div>        
         <div class="footer-copyright">
-            <p>© 2021 Copyright Text </p>
+            <p>© 2021 Все права защищены </p>
         </div>
     </footer>
-  
 </section>
 </body>
 </html>
