--- a/pages/galery.html
+++ b/pages/galery.html
@@ -185,13 +185,13 @@
 
 <div class="row col-lg-12 flex-wrap justify-content-center align-items-center px-5">
     <div class="col-lg-4 col-md-6 p-1">
-        <img src="../images/galery/v/Венеция белоснежное (3).jpg">
+        <img src="../images/galery/v/яльчики выездная (9).jpg">
     </div>
     <div class="col-lg-4 col-md-6 p-1">
-        <img src="../images/galery/v/Венеция белоснежное (12).jpg">
+        <img src="../images/galery/v/роланд пудра (12).jpg">
     </div>
     <div class="col-lg-4 col-md-6 p-1">
-        <img src="../images/galery/v/Венеция белоснежное (1).jpg">
+        <img src="../images/galery/v/разное 10.jpg">
     </div>
 </div>
 
