--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
+<meta name="yandex-verification" content="9a6525b2b552e6cd" />
 <meta charset="utf-8">
 	<title>Студия декора и праздника Зефир</title>
 	<link rel="shortcut icon" href="images/icon.jpg">
